# sudoku-kata-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
SudokuKata/: CMakeLists.txt  main.cpp
SudokuKataCpp/: CMakeLists.txt  CellGroup.cpp  CellGroup.h  GroupsWithNMasks.cpp  GroupsWithNMasks.h  Program.cpp  Program.h  TwoDigitMaskGroups.cpp  TwoDigitMaskGroups.h
SudokuKataCpp/Utilities/: CandidatesStringifier.cpp  CandidatesStringifier.h  GridStringifier.cpp  GridStringifier.h  PortableRandomNumberGenerator.cpp  PortableRandomNumberGenerator.h
SudokuKataTestsCpp/: CMakeLists.txt  GridStringifierTests.cpp  GridStringifierTests.h  PortableRandomNumberGeneratorTests.cpp  ProgramTests.cpp
SudokuKataTestsCpp/approval_tests/: GridStringifierTests.TestPartialBoard.approved.txt  GridStringifierTests.TestPartialBoardAsCode.approved.txt  GridStringifierTests.TestPopulatedBoard.approved.txt  GridStringifierTests.TestPopulatedBoardAsCode.approved.txt  PortableRandomNumberGeneratorTests.PortableRandomNumberGenerator.approved.txt  ProgramTests.Should_do_the_same_thing_twice.approved.txt
dependencies/: CMakeLists.txt
